--- a/src/index.html
+++ b/src/index.html
@@ -151,8 +151,8 @@
 
     <section class="resume">
         <div class="container">
-            <h2 class="title title_fs16 resume__title">Опыт</h2>
-            <div class="title title_fs36 resume__subtitle">Чем я буду полезна</div>
+            <h2 class="title title_fs16 title__section-title">Опыт</h2>
+            <div class="title title_fs36 title__section-subtitle">Чем я буду полезна</div>
             <div class="divider"></div>
 
             <div class="resume__wrapper">
@@ -228,8 +228,8 @@
 
     <section class="skills">
         <div class="container">
-            <h2 class="title title_fs16 skills__title">Навыки</h2>
-            <div class="title title_fs36 skills__subtitle">Что я использую в работе</div>
+            <h2 class="title title_fs16 title__section-title">Навыки</h2>
+            <div class="title title_fs36 title__section-subtitle">Что я использую в работе</div>
             <div class="divider"></div>
 
             <div class="skills__items">
@@ -328,6 +328,75 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="portfolio">
+        <div class="container">
+            <h2 class="title title_fs16 title__section-title">Портфолио</h2>
+            <div class="title title_fs36 title__section-subtitle">Мои работы</div>
+            <div class="divider"></div>
+
+            <div class="portfolio__wrapper">
+                <a href="#" class="portfolio__item">
+                    <img src="img/works/uber.jpg" alt="uber">
+                </a>
+                <a href="#" class="portfolio__item">
+                    <img src="img/works/pulse.jpg" alt="pulse">
+                </a>
+                <a href="#" class="portfolio__item">
+                    <img src="img/works/bread.jpg" alt="bread">
+                </a>
+                <a href="#" class="portfolio__item vertical">
+                    <img src="img/works/plans.jpg" alt="plans">
+                </a>
+                <a href="#" class="portfolio__item">
+                    <img src="img/works/ipad.jpg" alt="ipad">
+                </a>
+                <a href="#" class="portfolio__item horizontal">
+                    <img src="img/works/mac.jpg" alt="mac">
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="price">
+        <div class="container">
+            <h2 class="title title_fs16 title__section-title">Прайс-лист</h2>
+            <div class="divider"></div>
+            <div class="price__wrapper">
+                <div class="price__item">
+                    <div class="price__type title title_fs14">Landing-page</div>
+                    <div class="price__count title title_fs14">от 8000 руб.</div>
+                    <div class="price__descr">Одностраничный сайт для презентации услуг/товаров/...</div>
+                </div>
+                <div class="price__item">
+                    <div class="price__type title title_fs14">Web-приложение</div>
+                    <div class="price__count title title_fs14">от 28000 руб.</div>
+                    <div class="price__descr">Приложение внутри браузера для лучшего комфорта</div>
+                </div>
+                <div class="price__item">
+                    <div class="price__type title title_fs14">Корпоративный сайт</div>
+                    <div class="price__count title title_fs14">от 20000 руб.</div>
+                    <div class="price__descr">Сайт для вашего бизнеса или компании</div>
+                </div>
+                <div class="price__item">
+                    <div class="price__type title title_fs14">Android/IOS Приложение</div>
+                    <div class="price__count title title_fs14">от 25000 руб.</div>
+                    <div class="price__descr">Приложение для смартфона любой ОС</div>
+                </div>
+                <div class="price__item">
+                    <div class="price__type title title_fs14">Интернет-магазин</div>
+                    <div class="price__count title title_fs14">от 30000 руб.</div>
+                    <div class="price__descr">Инструмент для ваших продаж в сети</div>
+                </div>
+                <div class="price__item">
+                    <div class="price__type title title_fs14">Дизайн</div>
+                    <div class="price__count title title_fs14">Индивидуально</div>
+                    <div class="price__descr">Создам дизайн для вашего сайта/приложения...</div>
+                </div>
+            </div>
+
         </div>
     </section>
 
