--- a/src/index.html
+++ b/src/index.html
@@ -396,7 +396,57 @@
                     <div class="price__descr">Создам дизайн для вашего сайта/приложения...</div>
                 </div>
             </div>
+        </div>
+    </section>
 
+    <section class="contacts">
+        <div class="container">
+            <div class="contacts__wrapper">
+                <div class="contacts__photo">
+                    <img src="img/main_photo.jpg" alt="photo">
+                </div>
+                <div class="contacts__descr">
+                    <h2 class="title title_fs16 contacts__title">Контакты</h2>
+                    <div class="title title_fs36 contacts__subtitle">Свяжитесь со мной</div>
+                    <div class="divider"></div>
+                    <div class="title title_fs14 contacts__text">Любым удобным для вас способом:</div>
+                    <div class="contacts__social">
+                        <a href="#" class="contacts__link">
+                            <img src="icons/social/Facebook_norm.svg" alt="facebook">
+                        </a>
+                        <a href="#" class="contacts__link">
+                            <img src="icons/social/telegram.svg" alt="telegramm">
+                        </a>
+                        <a href="#" class="contacts__link">
+                            <img src="icons/social/Instagram_norm.svg" alt="instagram">
+                        </a>
+                    </div>
+                    <div class="title title_fs14 contacts__text">Или оставьте ваши данные и я сама вам напишу:</div>
+
+                    <form action="#" class="contacts__form">
+                        <div class="contacts__input">
+                            <input required name="name" id="name" type="text">
+                            <label for="name">Ваше имя</label>
+                        </div>
+                        <div class="contacts__input">
+                            <input required name="email" id="email" type="email">
+                            <label for="email">Ваша почта</label>
+                        </div>
+                        <div class="contacts__textarea">
+                            <textarea name="text" id="text" ></textarea>
+                            <label for="text">Ваше сообщение</label>
+                        </div>
+                        <div class="contacts__triggers">
+                            <button class="contacts__btn btn">Отправить сообщение</button>
+                            <div class="contacts__policy">
+                                <input required type="checkbox">
+                                <span>Я согласен(а) с <a href="№">политикой конфиденциальности</a></span>
+                            </div>
+                        </div>
+                    </form>
+
+                </div>
+            </div>
         </div>
     </section>
 
